--- a/uploads/index.html
+++ b/uploads/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <meta http-equiv="refresh" content="0;URL=http://www.pptv.com">
+    <meta http-equiv="refresh" content="0;URL=/">
 </head>
 <body>
 
